fix ui fit on IE9, add modernizr to browser

--- a/src/sass/libraries/fit.scss
+++ b/src/sass/libraries/fit.scss
@@ -11,7 +11,10 @@
     }
 
     .mod--no-object-fit &{
-      &__cover, &__contain{ position: relative; visibility: hidden }
+      &__cover, &__contain{
+        position: relative; visibility: hidden;
+        &[style]{ visibility: visible}
+      }
     }
   }
 }
